--- a/.github/workflows/publish-dist-on-merge.yml
+++ b/.github/workflows/publish-dist-on-merge.yml
@@ -28,13 +28,13 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'pnpm'
+          cache: 'npm'
 
       - name: Install dependencies
-        run: pnpm i
+        run: npm ci
 
       - name: Build
-        run: pnpm run build
+        run: npm run build
 
       # Check out the target GitHub Pages repo into a subfolder
       - name: Check out target repo WanManolo.github.io
