--- a/.github/workflows/publish-dist-on-merge.yml
+++ b/.github/workflows/publish-dist-on-merge.yml
@@ -31,10 +31,10 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm ci
+        run: npm i -g pnpm && pnpm i
 
       - name: Build
-        run: npm run build
+        run: pnpm run build
 
       # Check out the target GitHub Pages repo into a subfolder
       - name: Check out target repo WanManolo.github.io
