--- a/.github/workflows/publish-dist-on-merge.yml
+++ b/.github/workflows/publish-dist-on-merge.yml
@@ -31,7 +31,7 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm ci
+        run: npm i -g pnpm && pnpm i
 
       - name: Build
         run: npm run build
