--- a/package.json
+++ b/package.json
@@ -40,5 +40,9 @@
         "*.{js,jsx,ts,tsx,astro,css,md,json}": [
             "prettier --write"
         ]
-    }
+    },
+  "engines": {
+    "node": "22.18.0"
+  },
+  "packageManager": "pnpm@10.14.0"
 }
