fix: ammend after merge

--- a/.github/workflows/publish-dist-on-merge.yml
+++ b/.github/workflows/publish-dist-on-merge.yml
@@ -24,17 +24,19 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Use Node.js 20
+      - name: Use Node.js 22.18.0 (with pnpm cache)
         uses: actions/setup-node@v4
         with:
-          node-version: 20
-          cache: 'npm'
+          node-version: 22.18.0
+          cache: 'pnpm'
+          # cache-dependency-path: 'pnpm-lock.yaml'
 
-      - name: Enable corepack
-        run: corepack enable
-
-      - name: Activate pnpm 10.14.0
-        run: corepack prepare pnpm@10.14.0 --activate
+      - name: Set up pnpm 10.14.0 (standalone)
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10.14.0
+          run_install: false
+          standalone: true
 
       - name: Verify pnpm
         run: pnpm -v
