--- a/.github/workflows/ci-build-on-pr-develop.yml
+++ b/.github/workflows/ci-build-on-pr-develop.yml
@@ -31,11 +31,12 @@ jobs:
           cache: 'pnpm'
           # cache-dependency-path: 'pnpm-lock.yaml'
 
-      - name: Enable corepack
-        run: corepack enable
-
-      - name: Activate pnpm 10.14.0
-        run: corepack prepare pnpm@10.14.0 --activate
+      - name: Set up pnpm 10.14.0 (standalone)
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10.14.0
+          run_install: false
+          standalone: true
 
       - name: Verify pnpm
         run: pnpm -v
