fix: ammend pnpm setup

--- a/.github/workflows/ci-build-on-pr-develop.yml
+++ b/.github/workflows/ci-build-on-pr-develop.yml
@@ -31,12 +31,8 @@ jobs:
           cache: 'pnpm'
           # cache-dependency-path: 'pnpm-lock.yaml'
 
-      - name: Set up pnpm 10.14.0 (standalone)
+      - name: Set up pnpm
         uses: pnpm/action-setup@v4
-        with:
-          version: 10.14.0
-          run_install: false
-          standalone: true
 
       - name: Verify pnpm
         run: pnpm -v
