--- a/.github/workflows/publish-dist-on-merge.yml
+++ b/.github/workflows/publish-dist-on-merge.yml
@@ -26,6 +26,9 @@ jobs:
 
             - name: Set up pnpm
               uses: pnpm/action-setup@v4
+              with:
+                  version: 10.14.0
+                  run_install: false
 
             - name: Use Node.js 22.18.0 (with pnpm cache)
               uses: actions/setup-node@v4
