--- a/.github/workflows/ci-build-on-pr-develop.yml
+++ b/.github/workflows/ci-build-on-pr-develop.yml
@@ -1,53 +1,53 @@
 name: PR build (develop)
 
 on:
-  pull_request:
-    branches: [develop]
-    types: [opened, synchronize, reopened, ready_for_review]
+    pull_request:
+        branches: [develop]
+        types: [opened, synchronize, reopened, ready_for_review]
 
 concurrency:
-  group: pr-build-develop-${{ github.event.pull_request.head.ref }}
-  cancel-in-progress: true
+    group: pr-build-develop-${{ github.event.pull_request.head.ref }}
+    cancel-in-progress: true
 
 jobs:
-  build:
-    name: Build (pnpm)
-    # Skip CI for draft PRs to save minutes. Remove this if you want to build drafts too.
-    if: github.event.pull_request.draft == false
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
+    build:
+        name: Build (pnpm)
+        # Skip CI for draft PRs to save minutes. Remove this if you want to build drafts too.
+        if: github.event.pull_request.draft == false
+        runs-on: ubuntu-latest
+        permissions:
+            contents: read
 
-    steps:
-      - name: Check out source repo
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+        steps:
+            - name: Check out source repo
+              uses: actions/checkout@v4
+              with:
+                  fetch-depth: 0
 
-      - name: Use Node.js 22.18.0 (with pnpm cache)
-        uses: actions/setup-node@v4
-        with:
-          node-version: 22.18.0
-          cache: 'pnpm'
-          # cache-dependency-path: 'pnpm-lock.yaml'
+            - name: Set up pnpm
+              uses: pnpm/action-setup@v4
+              with:
+                  version: 10.14.0
+                  run_install: false
 
-      - name: Enable corepack
-        run: corepack enable
+            - name: Use Node.js 22.18.0 (with pnpm cache)
+              uses: actions/setup-node@v4
+              with:
+                  node-version: 22.18.0
+                  cache: 'pnpm'
+                  # cache-dependency-path: 'pnpm-lock.yaml'
 
-      - name: Activate pnpm 10.14.0
-        run: corepack prepare pnpm@10.14.0 --activate
+            - name: Verify pnpm
+              run: pnpm -v
 
-      - name: Verify pnpm
-        run: pnpm -v
+            - name: Install dependencies (pnpm)
+              run: pnpm install --frozen-lockfile
 
-      - name: Install dependencies (pnpm)
-        run: pnpm install --frozen-lockfile
+            - name: Build
+              run: pnpm run build
 
-      - name: Build
-        run: pnpm run build
-
-      # Optional:
-      # - name: Test
-      #   run: pnpm test -- --ci
-      # - name: Lint
-      #   run: pnpm run lint
+            # Optional:
+            # - name: Test
+            #   run: pnpm test -- --ci
+            # - name: Lint
+            #   run: pnpm run lint
