--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -13,6 +13,8 @@
     "arrowParens": "always",
     "endOfLine": "lf",
     "plugins": ["prettier-plugin-astro", "prettier-plugin-tailwindcss"],
+    "tailwindConfig": "./tailwind.config.ts",
+    "tailwindFunctions": ["clsx", "cn", "cva"],
     "overrides": [
         {
             "files": "*.astro",
