--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
         "astro": "astro",
         "format": "prettier --cache --write .",
         "format:check": "prettier --check .",
-        "prepare": "husky"
+        "prepare": "husky",
+        "lint": "eslint . --ext .js,.jsx,.ts,.tsx,.astro",
+        "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx,.astro --fix",
+        "lint:check": "eslint . --ext .js,.jsx,.ts,.tsx,.astro --max-warnings 0"
     },
     "dependencies": {
         "@ant-design/colors": "^7.2.1",
@@ -30,19 +33,31 @@
         "tailwindcss": "^4.1.12"
     },
     "devDependencies": {
+        "@eslint/eslintrc": "^3.3.1",
+        "@eslint/js": "^9.33.0",
+        "@types/eslint-plugin-jsx-a11y": "^6.10.0",
+        "@typescript-eslint/eslint-plugin": "^8.39.1",
+        "@typescript-eslint/parser": "^8.39.1",
+        "eslint": "^9.33.0",
+        "eslint-plugin-astro": "^1.3.1",
+        "eslint-plugin-jsx-a11y": "^6.10.2",
+        "eslint-plugin-react": "^7.37.5",
+        "eslint-plugin-react-hooks": "^5.2.0",
         "husky": "^9.1.7",
         "lint-staged": "^16.1.5",
         "prettier": "^3.6.2",
         "prettier-plugin-astro": "^0.14.1",
-        "prettier-plugin-tailwindcss": "^0.6.14"
+        "prettier-plugin-tailwindcss": "^0.6.14",
+        "tsx": "^4.20.4",
+        "typescript-eslint": "^8.39.1"
     },
     "lint-staged": {
         "*.{js,jsx,ts,tsx,astro,css,md,json}": [
             "prettier --write"
         ]
     },
-  "engines": {
-    "node": "22.18.0"
-  },
-  "packageManager": "pnpm@10.14.0"
+    "engines": {
+        "node": "22.18.0"
+    },
+    "packageManager": "pnpm@10.14.0"
 }
